[package]
edition = "2021"
name = "snake"
version = "0.1.0"

[[bin]]
name = "snake"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = ["esp32", "unstable"] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
atomic_enum = "0.3.0"

embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
ssd1306 = { version = "0.10.0", features = [
    "async",
    "graphics",
    "embedded-graphics-core",
] }
esp-println = { version = "0.13.1", features = ["esp32", "log"]}
nb = "1.1.0"
fugit = "0.3.7"
itoa = "1.0.15"
log = { version = "0.4.22" }
heapless = "0.8.0"
esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
# nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
